--- a/src/BdrsSide/atomic.css
+++ b/src/BdrsSide/atomic.css
@@ -1,16 +1,16 @@
-.BrdsT\(1rem\) {
+.Brdst\(1rem\) {
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
 }
-.BrdsB\(2rem\) {
+.Brdsb\(2rem\) {
   border-bottom-left-radius: 2rem;
   border-bottom-right-radius: 2rem;
 }
-.BrdsStart\(3rem\) {
+.Brdsstart\(3rem\) {
   border-top-left-radius: 3rem;
   border-bottom-left-radius: 3rem;
 }
-.BrdsEnd\(4rem\) {
-  border-top-right-radius: 4rem;
-  border-bottom-right-radius: 4rem;
+.Brdsend\(5rem\) {
+  border-top-right-radius: 5rem;
+  border-bottom-right-radius: 5rem;
 }
